--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -135,6 +135,13 @@
     
       "products.10.name": "सेल्फ-लोडिंग कंक्रीट मिक्सर ट्रक",
       "products.10.description": "एक बहुप्रयोजन और कुशल ट्रक, जो साइट पर कंक्रीट मिश्रण और परिवहन के लिए स्व-लोडिंग प्रणाली से सुसज्जित है।",
+      
+        "products.11.name": "ट्रैक्टर हेड",
+        "products.11.description": "एक शक्तिशाली ट्रक जो अर्ध-ट्रेलरों को खींचने के लिए डिज़ाइन किया गया है, जो भारी भार के लिए कुशल और विश्वसनीय परिवहन प्रदान करता है।",
+        "products.12.name": "डंप ट्रक",
+        "products.12.description": "एक भारी शुल्क ट्रक जिसका उपयोग बल्क सामग्री जैसे रेत, बजरी, या विध्वंस कचरे के परिवहन और उतारने के लिए किया जाता है।",
+      
+      
     
     
     "our_catalogue": "हमारा कैटलॉग",
@@ -400,7 +407,32 @@
                                             "Heavy-duty rotating drum for uniform concrete mixing": "समान कंक्रीट मिश्रण के लिए भारी-श्रेणी का घूर्णन ड्रम",
                                             "High-performance engine for rough terrain operations": "खुरदरे इलाकों के लिए उच्च प्रदर्शन इंजन",
                                             "Integrated weighing and water dosing system": "एकीकृत वजन और जल मापन प्रणाली",
-                                            "Ergonomic control panel for easy operation": "आसान संचालन के लिए एर्गोनोमिक नियंत्रण पैनल"
+                                            "Ergonomic control panel for easy operation": "आसान संचालन के लिए एर्गोनोमिक नियंत्रण पैनल",
+                                            
+                                              "Tractor Head": "ट्रैक्टर हेड",
+                                              "The Tractor Head is a high-performance truck built for transporting heavy cargo over long distances. Designed to tow semi-trailers, it features a robust chassis, a powerful engine, and an advanced suspension system for stability and comfort. Equipped with modern safety features, aerodynamic design, and fuel-efficient technology, this vehicle ensures maximum productivity while minimizing operational costs. The spacious and ergonomic cabin provides comfort for long-haul drivers, making it an ideal choice for logistics and freight transport.": "ट्रैक्टर हेड एक उच्च-प्रदर्शन वाला ट्रक है जिसे भारी माल को लंबी दूरी तक परिवहन करने के लिए बनाया गया है। इसे सेमी-ट्रेलरों को खींचने के लिए डिज़ाइन किया गया है और इसमें एक मजबूत चेसिस, शक्तिशाली इंजन और स्थिरता और आराम के लिए एक उन्नत निलंबन प्रणाली है। आधुनिक सुरक्षा सुविधाओं, एयरोडायनामिक डिज़ाइन और ईंधन-कुशल तकनीक से लैस यह वाहन अधिकतम उत्पादकता सुनिश्चित करता है जबकि परिचालन लागत को कम करता है। इसकी विशाल और एर्गोनोमिक केबिन लंबी दूरी के ड्राइवरों के लिए आराम प्रदान करती है, जिससे यह लॉजिस्टिक्स और माल परिवहन के लिए एक आदर्श विकल्प बन जाता है।",
+                                              "Powerful engine for heavy-duty towing": "भारी माल खींचने के लिए शक्तिशाली इंजन",
+                                              "Aerodynamic design for fuel efficiency": "ईंधन दक्षता के लिए वायुगतिकीय डिजाइन",
+                                              "Advanced suspension for smooth handling": "स्मूद हैंडलिंग के लिए उन्नत निलंबन प्रणाली",
+                                              "Spacious and ergonomic driver cabin": "विस्तृत और एर्गोनोमिक ड्राइवर केबिन",
+                                              "Modern safety features for secure transport": "सुरक्षित परिवहन के लिए आधुनिक सुरक्षा सुविधाएँ",
+                                              "High-capacity fuel tank for long-haul journeys": "लंबी दूरी की यात्रा के लिए उच्च क्षमता वाला ईंधन टैंक",
+                                              
+                                              
+                                                "Dump Truck": "डंप ट्रक",
+                                                "The Dump Truck is a rugged and powerful vehicle designed for hauling bulk materials efficiently. Built with a reinforced steel frame and a hydraulically operated dump bed, it ensures smooth loading and unloading of materials like sand, gravel, rocks, and debris. This truck is widely used in construction, mining, and roadwork projects, offering excellent durability and high load capacity. Its off-road capabilities, enhanced traction system, and powerful diesel engine allow it to navigate rough terrains with ease, making it an essential asset for heavy-duty transport needs.": "डंप ट्रक एक मजबूत और शक्तिशाली वाहन है जिसे थोक सामग्री के कुशल परिवहन के लिए डिज़ाइन किया गया है। यह एक सुदृढ़ स्टील फ्रेम और हाइड्रोलिक संचालित डंप बेड के साथ बनाया गया है, जो रेत, बजरी, पत्थर और मलबे जैसी सामग्रियों को आसानी से लोड और अनलोड करने की सुविधा प्रदान करता है। यह ट्रक निर्माण, खनन और सड़क निर्माण परियोजनाओं में व्यापक रूप से उपयोग किया जाता है और उत्कृष्ट स्थायित्व और उच्च लोड क्षमता प्रदान करता है। इसकी ऑफ-रोड क्षमताएं, उन्नत ट्रैक्शन सिस्टम और शक्तिशाली डीजल इंजन इसे कठिन इलाकों में आसानी से चलाने में सक्षम बनाते हैं, जिससे यह भारी परिवहन आवश्यकताओं के लिए एक अनिवार्य संसाधन बन जाता है।",
+                                                "Hydraulically operated dump bed for easy unloading": "आसान अनलोडिंग के लिए हाइड्रोलिक संचालित डंप बेड",
+                                                "Heavy-duty steel chassis for durability": "दीर्घकालिक मजबूती के लिए भारी-श्रेणी का स्टील चेसिस",
+                                                "High load capacity for bulk material transport": "थोक सामग्री परिवहन के लिए उच्च लोड क्षमता",
+                                                "Advanced suspension system for stability": "स्थिरता के लिए उन्नत सस्पेंशन सिस्टम",
+                                                "Off-road capabilities for rough terrain operations": "कठिन इलाकों में संचालन के लिए ऑफ-रोड क्षमताएं",
+                                                "Powerful diesel engine for maximum efficiency": "अधिकतम दक्षता के लिए शक्तिशाली डीजल इंजन"
+                                            
+                                            
+                                            
+                                            
+                                          
+                                          
                                           
                                           
                                         
